Full first page in option

--- a/src/css/OptionsButton.css
+++ b/src/css/OptionsButton.css
@@ -117,6 +117,7 @@
 /* Контейнер этапов (табы) */
 .tab-container {
   display: flex;
+  overflow: hidden;
   width: 1080px;
   height: auto;
   min-height: 42px;
