--- a/src/css/OptionsButton.css
+++ b/src/css/OptionsButton.css
@@ -319,6 +319,17 @@
   color: #333;
 }
 
+/* Стили для заголовков */
+.custom-title {
+  font-family: 'Manrope', sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 21.86px;
+  text-align: left;
+  margin-top: 10px; /* Расстояние от предыдущего текста */
+  margin-bottom: 10px;
+}
+
 .description-text p {
   width: 959px;
   height: 38px;
@@ -329,6 +340,8 @@
   font-size: 14px;
   font-weight: 400;
 }
+
+
 
 .read-more-container {
   display: flex;
